# liquidGlassPill

./: .gitignore  APPLICATION_DETAILS.txt  CMakeLists.txt  README.md  build.ps1
shaders/: liquid.frag  liquid.vert
src/: desktop_overlay.cpp  desktop_overlay.h  liquid_glass_shared.h  main.cpp  overlay_pill_controller.cpp  overlay_pill_controller.h
